<resources>
    <string name="app_name">OfertAPPs</string>

    <string name="imageViewSoftwareImageDescription"> Image of the software </string>

    <string name="promptSoftwareName"> Software name </string>
    <string name="promptParentSoftware"> Parent software </string>
    <string name="promptPublisher"> Publisher </string>
    <string name="promptReleaseDate"> Release date </string>
    <string name="promptDescription"> Brief description of the software </string>

    <string name="choiceParentSoftwareProgram"> Program </string>
    <string name="choiceParentSoftwareGame"> Game </string>
    <string name="choiceParentSoftwareExtension"> Extension </string>

    <string name="textViewSoftwareNameWarning"> *Software name is not valid </string>
    <string name="textViewParentSoftwareWarning"> *Parent software is not valid </string>
    <string name="textViewPublisherWarning"> *Publisher is not valid </string>
    <string name="textViewReleaseDateWarning"> *Release date is not valid </string>
    <string name="textViewDescriptionWarning"> *Description is not valid </string>

    <string name="emptyTextViewWarning"> *Field is empty </string>

    <string name="button_cancel">Cancel</string>
    <string name="button_accept">Accept</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <string-array name="SoftwareTypes">
        <item> Program </item>
        <item> Game </item>
        <item> Extension </item>
    </string-array>

    <string name="promptExpirationDate"> Expiration date </string>
    <string name="promptShop"> Shop </string>
    <string name="promptBasePrice"> Base price </string>
    <string name="promptDiscount"> Discount </string>
    <string name="promptUrl"> https://www.yoururl.com </string>
    <string name="percentage"> % </string>

    <string name="textViewExpirationDateWarning"> *Expiration date is not valid </string>
    <string name="textViewShopWarning"> *Shop is not valid </string>
    <string name="textViewBasePriceWarning"> *Base price is not valid </string>
    <string name="textViewDiscountWarning"> *Discount is not valid </string>
    <string name="textViewUrlWarning"> *Url is not valid </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ExampleLogin</string>
    <string name="nav_header_subtitle">example@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_add_software">Add Software</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_wish_list">WishList</string>
    <string name="menu_my_offers">My Offers</string>

    <string name="modification_confirm">Do you want to save the changes?</string>

</resources>
