<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddOfferActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextSoftwareName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/promptSoftwareName" />

        <TextView
            android:id="@+id/textViewSoftwareNameWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSoftwareNameWarning" />

        <EditText
            android:id="@+id/editTextExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:text="@string/promptExpirationDate" />

        <TextView
            android:id="@+id/textViewExpirationDateWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewExpirationDateWarning" />

        <EditText
            android:id="@+id/editTextOfferShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/promptShop" />

        <TextView
            android:id="@+id/textViewOfferShopWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewShopWarning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextBasePrice"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/promptBasePrice" />

            <EditText
                android:id="@+id/editTextDiscount"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/promptDiscount" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewBasePriceWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewBasePriceWarning" />

            <TextView
                android:id="@+id/textViewDiscountWarning"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewDiscountWarning" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/promptUrl" />

        <TextView
            android:id="@+id/textViewUrlWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewUrlWarning" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="90dip"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/buttonAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:minWidth="90dip"
                android:text="@string/button_accept" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>