<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSoftwareActivity">

    <ImageView
        android:id="@+id/imageViewSoftwareImage"
        android:layout_width="118dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageViewSoftwareImageDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/editTextSoftwareName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/promptSoftwareName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSoftwareImage" />

    <Spinner
        android:id="@+id/spinnerSoftwareType"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSoftwareName" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewParentSoftware"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/promptParentSoftware"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSoftwareType" />

    <EditText
        android:id="@+id/editTextPublisher"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/promptPublisher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextViewParentSoftware" />

    <EditText
        android:id="@+id/editTextReleaseDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date|textPersonName"
        android:text="@string/promptReleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPublisher" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:text="@string/promptDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReleaseDate" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/buttonAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/buttonCancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <TextView
        android:id="@+id/textViewSoftwareNameWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSoftwareNameWarning"
        app:layout_constraintBottom_toTopOf="@+id/editTextSoftwareName"
        tools:layout_editor_absoluteX="56dp" />

    <TextView
        android:id="@+id/textViewSoftwareType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSoftwareTypeWarning"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSoftwareType"
        tools:layout_editor_absoluteX="56dp" />

    <TextView
        android:id="@+id/textViewParentSoftware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewParentSoftwareWarning"
        app:layout_constraintBottom_toTopOf="@+id/autoCompleteTextViewParentSoftware"
        tools:layout_editor_absoluteX="56dp" />

    <TextView
        android:id="@+id/textViewPublisherWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewPublisherWarning"
        app:layout_constraintBottom_toTopOf="@+id/editTextPublisher"
        tools:layout_editor_absoluteX="57dp" />

    <TextView
        android:id="@+id/textViewReleaseDateWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewReleaseDateWarning"
        app:layout_constraintBottom_toTopOf="@+id/editTextReleaseDate"
        tools:layout_editor_absoluteX="57dp" />

    <TextView
        android:id="@+id/textViewDescriptionWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDescriptionWarning"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        tools:layout_editor_absoluteX="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>